--- a/.github/workflows/update_flake.yml
+++ b/.github/workflows/update_flake.yml
@@ -7,12 +7,15 @@ on:
 
 jobs:
   lockfile:
+    name: Update Lockfile
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
+        with:
+          determinate: true
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@main
         with:
