--- a/.github/workflows/update_flake.yml
+++ b/.github/workflows/update_flake.yml
@@ -9,6 +9,9 @@ jobs:
   lockfile:
     name: Update Lockfile
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
