--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,6 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@v16
         with:
           determinate: true
+      - uses: DeterminateSystems/flakehub-cache-action@main
       - name: Check Nix
         run: nix develop --command make check-nix
