fail flake checker on maintenance

--- a/.github/workflows/nix_maintenance.yml
+++ b/.github/workflows/nix_maintenance.yml
@@ -27,3 +27,5 @@ jobs:
             dependencies
             automated
       - uses: DeterminateSystems/flake-checker-action@main
+        with:
+            fail-mode: true
