--- a/.github/workflows/nix_maintenance.yml
+++ b/.github/workflows/nix_maintenance.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
+      checks: write
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
