--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,13 @@
   "nixEnvSelector.nixFile": "${workspaceFolder}/flake.nix",
   "nixEnvSelector.suggestion": false,
   "nix.formatterPath": "alejandra",
+  "nix.enableLanguageServer": true,
+  "nix.serverPath": "nixd",
+  "nix.serverSettings": {
+    "nixd": {
+      "formatting": {
+        "command": [ "alejandra" ]
+      }
+     }
+  }
 }
