--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           determinate: true
       - uses: DeterminateSystems/flakehub-cache-action@main
-      - name: Format Nix Files
-        run: nix develop --command make format-nix-check
+      - name: Format Files
+        run: nix develop --command make format-ci
