expose treefmt as a binary
closes #49
closes #39
closes #1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
       }
     }
   },
-  "editor.defaultFormatter": "ibecker.treefmt-vscode"
+  "editor.defaultFormatter": "ibecker.treefmt-vscode",
+  "treefmt.command": "treefmt",
+  "nix.formatterPath": "treefmt"
 }
