--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,5 @@
     }
   },
   "editor.defaultFormatter": "ibecker.treefmt-vscode",
-  "treefmt.command": "treefmt",
-  "nix.formatterPath": "treefmt"
+  "treefmt.command": "treefmt"
 }
