--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "arrterian.nix-env-selector",
-    "jnoortheen.nix-ide",
-  ]
+  "recommendations": ["arrterian.nix-env-selector", "jnoortheen.nix-ide"]
 }
