--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       contents: "read"
     with:
       visibility: public
+      fail-fast: false
   flake-checker:
     runs-on: ubuntu-latest
     steps:
