move over to sep branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,13 @@ concurrency:
   cancel-in-progress: true
 jobs:
   DeterminateCI:
-    uses: dataheld/ci/.github/workflows/workflow.yml@pass-thru-failearly
+    uses: DeterminateSystems/ci/.github/workflows/workflow.yml@main
     permissions:
       id-token: "write"
       contents: "read"
     with:
       visibility: public
+      fail-fast: false
   flake-checker:
     runs-on: ubuntu-latest
     steps:
